Fix Netty full-build test path: Guava, JUnit 6, suite deps.
Default user path `jk build --redo` was failing on missing Guava (not a JDK issue)
and JUnit Platform 6 vs Jupiter 5 skew that produced empty discovery. Align Mill
test-stack deps, promote ChannelHandlerMetadataUtil, pin JUnit 6.1 to the jk
runner, and document curated excludes + --skip-tests as the Mill-fair baseline.